Moved calculation button on the scenario list level Added FE implementation for scenario assessment requests Added initial implementation for scenario assessment request in BE
