# nca-webapp/src/app/models/scenario-request-model.ts
@@ -1,0 +1,5 @@
+import { AssessmentRequestModel } from './assessment-request-model';
+
+export class ScenarioRequestModel {
+  scenarios: AssessmentRequestModel[] = [];
+}
